==> BaudDance/LEDDrive/library/TI-launchpad-M0G3507/m0-g3507_OLED/OLED/OLED.c <==
#include "OLED.h"
#define OLED_ADDR 0x3C
#define OLED_PAGE 8            // OLED页数
#define OLED_ROW 8 * OLED_PAGE // OLED行数
#define OLED_COLUMN 128        // OLED列数

int OLED_WriteByte(uint8_t addr,uint8_t data)
{
  uint8_t buff[2] = {0};
  buff[0] = addr;
  buff[1] = data;
  /* Wait for I2C to be Idle */
  while (!( 
            DL_I2C_getControllerStatus(I2C_0_INST) & DL_I2C_CONTROLLER_STATUS_IDLE))
            ;

        /* Send the packet to the controller.
         * This function will send Start + Stop automatically.
         */
        DL_I2C_startControllerTransfer(I2C_0_INST, OLED_ADDR,
            DL_I2C_CONTROLLER_DIRECTION_TX, 2);
        DL_I2C_fillControllerTXFIFO(I2C_0_INST, &buff[0], 2);
      /* Poll until the Controller writes all bytes */
      while (DL_I2C_getControllerStatus(I2C_0_INST) &
                     DL_I2C_CONTROLLER_STATUS_BUSY_BUS)
                  ;

      /* Trap if there was an error */
      if (DL_I2C_getControllerStatus(I2C_0_INST) &
          DL_I2C_CONTROLLER_STATUS_ERROR) {
          /* LED will remain high if there is an error */
          __BKPT(0);
      }
    return 0;
}

void OLED_Init(void) {
//   OLED_I2C_Init();
  delay_cycles(16000000);
  OLED_SendCmd(0xAE); // display off
  OLED_SendCmd(0x20); // Set Memory Addressing Mode
  OLED_SendCmd(0x10); // 00,Horizontal Addressing Mode;01,Vertical Addressing
                  // Mode;10,Page Addressing Mode (RESET);11,Invalid
  OLED_SendCmd(0xb0); // Set Page Start Address for Page Addressing Mode,0-7
  OLED_SendCmd(0xc8); // Set COM Output Scan Direction
  OLED_SendCmd(0x00); //---set low column address
  OLED_SendCmd(0x10); //---set high column address
  OLED_SendCmd(0x40); //--set start line address
  OLED_SendCmd(0x81); //--set contrast control register
  OLED_SendCmd(0xff); // áá?èμ÷?ú 0x00~0xff
  OLED_SendCmd(0xa1); //--set segment re-map 0 to 127
  OLED_SendCmd(0xa6); //--set normal display
  OLED_SendCmd(0xa8); //--set multiplex ratio(1 to 64)
  OLED_SendCmd(0x3F); //
  OLED_SendCmd(
      0xa4); // 0xa4,Output follows RAM content;0xa5,Output ignores RAM content
  OLED_SendCmd(0xd3); //-set display offset
  OLED_SendCmd(0x00); //-not offset
  OLED_SendCmd(0xd5); //--set display clock divide ratio/oscillator frequency
  OLED_SendCmd(0xf0); //--set divide ratio
  OLED_SendCmd(0xd9); //--set pre-charge period
  OLED_SendCmd(0x22); //
  OLED_SendCmd(0xda); //--set com pins hardware configuration
  OLED_SendCmd(0x12);
  OLED_SendCmd(0xdb); //--set vcomh
  OLED_SendCmd(0x20); // 0x20,0.77xVcc
  OLED_SendCmd(0x8d); //--set DC-DC enable
  OLED_SendCmd(0x14); //
  OLED_NewFrame();
  OLED_ShowFrame();
  OLED_SendCmd(0xaf); //--turn on oled panel
  
}
